external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_spec_schema_name.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/invalid_spec_schema_name.move:2:5
  │
2 │     spec schema foo<T> {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

